--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
     <h2>Pick A Color</h2>
     <input type="color" id="colorPicker">
+    <button id="eraser" onclick="toggleErase()">Toggle Eraser</button>
 
     <h2>Design Canvas</h2>
     <table id="pixel_canvas"></table>
