--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
     <h1>Lab: Pixel Art Maker</h1>
 
     <h2>Choose Grid Size</h2>
-    <form id="sizePicker">
+    <form id="sizePicker" onsubmit="makeGrid()">
         Grid Height:
         <input type="number" id="input_height" name="height" min="1" value="1">
         Grid Width:
@@ -18,9 +18,13 @@
         <input type="submit">
     </form>
 
-    <h2>Pick A Color</h2>
-    <input type="color" id="colorPicker">
-    <button id="eraser" onclick="toggleErase()">Toggle Eraser</button>
+    
+    <div id="toolbar">
+      <h2>Toolbar</h2>
+      <input type="color" id="colorPicker">
+      <button id="eraser" onclick="toggleErase()">Toggle Eraser</button>
+      <button id="clear" onclick="clearGrid()">Clear Grid</button>
+    </div>
 
     <h2>Design Canvas</h2>
     <table id="pixel_canvas"></table>
