--- a/app/index.html
+++ b/app/index.html
@@ -3,31 +3,49 @@
 <head>
     <title>Pixel Art Maker!</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Monoton">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Lab: Pixel Art Maker</h1>
 
-    <h2>Choose Grid Size</h2>
-    <form id="sizePicker" onsubmit="makeGrid()">
-        Grid Height:
-        <input type="number" id="input_height" name="height" min="1" value="1">
-        Grid Width:
-        <input type="number" id="input_width" name="width" min="1" value="1">
-        <input type="submit">
-    </form>
+  <div class="container" id="main">
+      <h1>Lab: Pixel Art Maker</h1>
 
-    
-    <div id="toolbar">
-      <h2>Toolbar</h2>
-      <input type="color" id="colorPicker">
-      <button id="eraser" onclick="toggleErase()">Toggle Eraser</button>
-      <button id="clear" onclick="clearGrid()">Clear Grid</button>
+      <h2>Choose Grid Size</h2>
+      <form id="sizePicker">
+        <div class="form-group">
+          <label for="input_height">Grid Height:</label>
+          <input type="number" id="input_height" name="height" min="1" value="1">
+        </div>
+        <div class="form-group">
+          <label for="input_width">Grid Width:</label>
+          <input type="number" id="input_width" name="width" min="1" value="1">
+        </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
+      <h2>Design Canvas</h2>
+      <div id="toolbar">
+        <input type="color" id="colorPicker">
+        <button id="eraser" class="btn btn-secondary" onclick="toggleErase()">Toggle Eraser</button>
+        <button id="clear" class="btn btn-danger" onclick="clearGrid()">Clear Grid</button>
+      </div>
+      <div>
+        <table id="pixel_canvas"></table>
+      </div>
     </div>
 
-    <h2>Design Canvas</h2>
-    <table id="pixel_canvas"></table>
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
     <script src="designs.js"></script>
 </body>
