Refactor for legibility

--- a/app/index.html
+++ b/app/index.html
@@ -34,8 +34,8 @@
       <h2>Design Canvas</h2>
       <div id="toolbar">
         <input type="color" id="colorPicker">
-        <button id="eraser" class="btn btn-secondary" onclick="toggleErase()">Toggle Eraser</button>
-        <button id="clear" class="btn btn-danger" onclick="clearGrid()">Clear Grid</button>
+        <button id="eraser" class="btn btn-secondary">Toggle Eraser</button>
+        <button id="clear" class="btn btn-danger">Clear Grid</button>
       </div>
       <div>
         <table id="pixel_canvas"></table>
