Try jquery with mobile event listner

--- a/app/index.html
+++ b/app/index.html
@@ -38,7 +38,7 @@
         <button id="clear" class="btn btn-danger">Clear Grid</button>
       </div>
       <div>
-        <table id="pixel_canvas gesturedZone"></table>
+        <table id="pixel_canvas"></table>
       </div>
     </div>
 
