add placeholder for color input for mobile devices

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,7 @@
       </form>
       <h2>Design Canvas</h2>
       <div id="toolbar">
-        <input type="color" id="colorPicker">
+        <input type="color" id="colorPicker" placeholder="color">
         <button id="eraser" class="btn btn-secondary">Toggle Eraser</button>
         <button id="clear" class="btn btn-danger">Clear Grid</button>
       </div>
