add color datalist for mobile

--- a/app/index.html
+++ b/app/index.html
@@ -33,7 +33,152 @@
       </form>
       <h2>Design Canvas</h2>
       <div id="toolbar">
-        <input type="color" id="colorPicker" placeholder="color">
+        <input type="color" list="colors" id="colorPicker" placeholder="color">
+        <datalist id="colors">
+            <option value="INDIANRED" style="color: INDIANRED;">
+            <option value="LIGHTCORAL" style="color: LIGHTCORAL;">
+            <option value="SALMON" style="color: SALMON;">
+            <option value="DARKSALMON" style="color: DARKSALMON;">
+            <option value="LIGHTSALMON" style="color: LIGHTSALMON;">
+            <option value="CRIMSON" style="color: CRIMSON;">
+            <option value="RED" style="color: RED;">
+            <option value="FIREBRICK" style="color: FIREBRICK;">
+            <option value="DARKRED" style="color: DARKRED;">
+            <option value="PINK" style="color: PINK;">
+            <option value="LIGHTPINK" style="color: LIGHTPINK;">
+            <option value="HOTPINK" style="color: HOTPINK;">
+            <option value="DEEPPINK" style="color: DEEPPINK;">
+            <option value="MEDIUMVIOLETRED" style="color: MEDIUMVIOLETRED;">
+            <option value="PALEVIOLETRED" style="color: PALEVIOLETRED;">
+            <option value="LIGHTSALMON" style="color: LIGHTSALMON;">
+            <option value="CORAL" style="color: CORAL;">
+            <option value="TOMATO" style="color: TOMATO;">
+            <option value="ORANGERED" style="color: ORANGERED;">
+            <option value="DARKORANGE" style="color: DARKORANGE;">
+            <option value="ORANGE" style="color: ORANGE;">
+            <option value="GOLD" style="color: GOLD;">
+            <option value="YELLOW" style="color: YELLOW;">
+            <option value="LIGHTYELLOW" style="color: LIGHTYELLOW;">
+            <option value="LEMONCHIFFON" style="color: LEMONCHIFFON;">
+            <option value="LIGHTGOLDENRODYELLOW" style="color: LIGHTGOLDENRODYELLOW;">
+            <option value="PAPAYAWHIP" style="color: PAPAYAWHIP;">
+            <option value="MOCCASIN" style="color: MOCCASIN;">
+            <option value="PEACHPUFF" style="color: PEACHPUFF;">
+            <option value="PALEGOLDENROD" style="color: PALEGOLDENROD;">
+            <option value="KHAKI" style="color: KHAKI;">
+            <option value="DARKKHAKI" style="color: DARKKHAKI;">
+            <option value="LAVENDER" style="color: LAVENDER;">
+            <option value="THISTLE" style="color: THISTLE;">
+            <option value="PLUM" style="color: PLUM;">
+            <option value="VIOLET" style="color: VIOLET;">
+            <option value="ORCHID" style="color: ORCHID;">
+            <option value="FUCHSIA" style="color: FUCHSIA;">
+            <option value="MAGENTA" style="color: MAGENTA;">
+            <option value="MEDIUMORCHID" style="color: MEDIUMORCHID;">
+            <option value="MEDIUMPURPLE" style="color: MEDIUMPURPLE;">
+            <option value="REBECCAPURPLE" style="color: REBECCAPURPLE;">
+            <option value="BLUEVIOLET" style="color: BLUEVIOLET;">
+            <option value="DARKVIOLET" style="color: DARKVIOLET;">
+            <option value="DARKORCHID" style="color: DARKORCHID;">
+            <option value="DARKMAGENTA" style="color: DARKMAGENTA;">
+            <option value="PURPLE" style="color: PURPLE;">
+            <option value="INDIGO" style="color: INDIGO;">
+            <option value="SLATEBLUE" style="color: SLATEBLUE;">
+            <option value="DARKSLATEBLUE" style="color: DARKSLATEBLUE;">
+            <option value="MEDIUMSLATEBLUE" style="color: MEDIUMSLATEBLUE;">
+            <option value="GREENYELLOW" style="color: GREENYELLOW;">
+            <option value="CHARTREUSE" style="color: CHARTREUSE;">
+            <option value="LAWNGREEN" style="color: LAWNGREEN;">
+            <option value="LIME" style="color: LIME;">
+            <option value="LIMEGREEN" style="color: LIMEGREEN;">
+            <option value="PALEGREEN" style="color: PALEGREEN;">
+            <option value="LIGHTGREEN" style="color: LIGHTGREEN;">
+            <option value="MEDIUMSPRINGGREEN" style="color: MEDIUMSPRINGGREEN;">
+            <option value="SPRINGGREEN" style="color: SPRINGGREEN;">
+            <option value="MEDIUMSEAGREEN" style="color: MEDIUMSEAGREEN;">
+            <option value="SEAGREEN" style="color: SEAGREEN;">
+            <option value="FORESTGREEN" style="color: FORESTGREEN;">
+            <option value="GREEN" style="color: GREEN;">
+            <option value="DARKGREEN" style="color: DARKGREEN;">
+            <option value="YELLOWGREEN" style="color: YELLOWGREEN;">
+            <option value="OLIVEDRAB" style="color: OLIVEDRAB;">
+            <option value="OLIVE" style="color: OLIVE;">
+            <option value="DARKOLIVEGREEN" style="color: DARKOLIVEGREEN;">
+            <option value="MEDIUMAQUAMARINE" style="color: MEDIUMAQUAMARINE;">
+            <option value="DARKSEAGREEN" style="color: DARKSEAGREEN;">
+            <option value="LIGHTSEAGREEN" style="color: LIGHTSEAGREEN;">
+            <option value="DARKCYAN" style="color: DARKCYAN;">
+            <option value="TEAL" style="color: TEAL;">
+            <option value="AQUA" style="color: AQUA;">
+            <option value="CYAN" style="color: CYAN;">
+            <option value="LIGHTCYAN" style="color: LIGHTCYAN;">
+            <option value="PALETURQUOISE" style="color: PALETURQUOISE;">
+            <option value="AQUAMARINE" style="color: AQUAMARINE;">
+            <option value="TURQUOISE" style="color: TURQUOISE;">
+            <option value="MEDIUMTURQUOISE" style="color: MEDIUMTURQUOISE;">
+            <option value="DARKTURQUOISE" style="color: DARKTURQUOISE;">
+            <option value="CADETBLUE" style="color: CADETBLUE;">
+            <option value="STEELBLUE" style="color: STEELBLUE;">
+            <option value="LIGHTSTEELBLUE" style="color: LIGHTSTEELBLUE;">
+            <option value="POWDERBLUE" style="color: POWDERBLUE;">
+            <option value="LIGHTBLUE" style="color: LIGHTBLUE;">
+            <option value="SKYBLUE" style="color: SKYBLUE;">
+            <option value="LIGHTSKYBLUE" style="color: LIGHTSKYBLUE;">
+            <option value="DEEPSKYBLUE" style="color: DEEPSKYBLUE;">
+            <option value="DODGERBLUE" style="color: DODGERBLUE;">
+            <option value="CORNFLOWERBLUE" style="color: CORNFLOWERBLUE;">
+            <option value="MEDIUMSLATEBLUE" style="color: MEDIUMSLATEBLUE;">
+            <option value="ROYALBLUE" style="color: ROYALBLUE;">
+            <option value="BLUE" style="color: BLUE;">
+            <option value="MEDIUMBLUE" style="color: MEDIUMBLUE;">
+            <option value="DARKBLUE" style="color: DARKBLUE;">
+            <option value="NAVY" style="color: NAVY;">
+            <option value="MIDNIGHTBLUE" style="color: MIDNIGHTBLUE;">
+            <option value="CORNSILK" style="color: CORNSILK;">
+            <option value="BLANCHEDALMOND" style="color: BLANCHEDALMOND;">
+            <option value="BISQUE" style="color: BISQUE;">
+            <option value="NAVAJOWHITE" style="color: NAVAJOWHITE;">
+            <option value="WHEAT" style="color: WHEAT;">
+            <option value="BURLYWOOD" style="color: BURLYWOOD;">
+            <option value="TAN" style="color: TAN;">
+            <option value="ROSYBROWN" style="color: ROSYBROWN;">
+            <option value="SANDYBROWN" style="color: SANDYBROWN;">
+            <option value="GOLDENROD" style="color: GOLDENROD;">
+            <option value="DARKGOLDENROD" style="color: DARKGOLDENROD;">
+            <option value="PERU" style="color: PERU;">
+            <option value="CHOCOLATE" style="color: CHOCOLATE;">
+            <option value="SADDLEBROWN" style="color: SADDLEBROWN;">
+            <option value="SIENNA" style="color: SIENNA;">
+            <option value="BROWN" style="color: BROWN;">
+            <option value="MAROON" style="color: MAROON;">
+            <option value="WHITE" style="color: WHITE;">
+            <option value="SNOW" style="color: SNOW;">
+            <option value="HONEYDEW" style="color: HONEYDEW;">
+            <option value="MINTCREAM" style="color: MINTCREAM;">
+            <option value="AZURE" style="color: AZURE;">
+            <option value="ALICEBLUE" style="color: ALICEBLUE;">
+            <option value="GHOSTWHITE" style="color: GHOSTWHITE;">
+            <option value="WHITESMOKE" style="color: WHITESMOKE;">
+            <option value="SEASHELL" style="color: SEASHELL;">
+            <option value="BEIGE" style="color: BEIGE;">
+            <option value="OLDLACE" style="color: OLDLACE;">
+            <option value="FLORALWHITE" style="color: FLORALWHITE;">
+            <option value="IVORY" style="color: IVORY;">
+            <option value="ANTIQUEWHITE" style="color: ANTIQUEWHITE;">
+            <option value="LINEN" style="color: LINEN;">
+            <option value="LAVENDERBLUSH" style="color: LAVENDERBLUSH;">
+            <option value="MISTYROSE" style="color: MISTYROSE;">
+            <option value="GAINSBORO" style="color: GAINSBORO;">
+            <option value="LIGHTGRAY" style="color: LIGHTGRAY;">
+            <option value="SILVER" style="color: SILVER;">
+            <option value="DARKGRAY" style="color: DARKGRAY;">
+            <option value="GRAY" style="color: GRAY;">
+            <option value="DIMGRAY" style="color: DIMGRAY;">
+            <option value="LIGHTSLATEGRAY" style="color: LIGHTSLATEGRAY;">
+            <option value="SLATEGRAY" style="color: SLATEGRAY;">
+            <option value="DARKSLATEGRAY" style="color: DARKSLATEGRAY;">
+            <option value="BLACK" style="color: BLACK;">
+          </datalist>
         <button id="eraser" class="btn btn-secondary">Toggle Eraser</button>
         <button id="clear" class="btn btn-danger">Clear Grid</button>
       </div>
