set up protractor and create first test

--- a/app/index.html
+++ b/app/index.html
@@ -29,7 +29,7 @@
           <label for="input_width">Grid Width:</label>
           <input type="number" id="input_width" name="width" min="1" value="1">
         </div>
-          <input type="submit" class="btn btn-primary">
+          <input type="submit" id="submit_dimensions" class="btn btn-primary">
       </form>
       <h2>Design Canvas</h2>
       <div id="toolbar">
